--- a/.github/ISSUE_TEMPLATE/PluginRequest.yml
+++ b/.github/ISSUE_TEMPLATE/PluginRequest.yml
@@ -9,10 +9,9 @@ body:
         Welcome to the Plugin Generation form.
         Change the field to the number of the pull request you want to turn into a plugin (e.g. 9172, 11347).
         The PR must be a content pull request.
-        
   - type: input
     attributes:
-      label: Name
+      label: Number
       description: Enter the pull request number.
       value: 9172
     validations:
