--- a/.github/workflows/on_issue.yml
+++ b/.github/workflows/on_issue.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Zip plugin
         run: |
           ls
-          zip -r PR-${{ steps.pr_number.outputs.contents }}.zip ${{ steps.pr_number.outputs.contents }}
+          zip -r "PR-${{ steps.pr_number.outputs.contents }}.zip" "${{ steps.pr_number.outputs.contents }}"
       - name: Upload plugins to release
         uses: ncipollo/release-action@v1.11.1
         with:
