--- a/.github/workflows/on_issue.yml
+++ b/.github/workflows/on_issue.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           git config user.name "script" 
           git config user.email "<>"
+          git pull
           git add .
           git commit -m "Generated Plugin"
       - name: Push changes
@@ -50,11 +51,6 @@ jobs:
       - if: contains(github.event.issue.labels.*.name, 'autoclose')
         name: Close Issue
         uses: peter-evans/close-issue@v3
-      - name: Get requested PR
-        uses: andstor/file-reader-action@v1
-        with:
-          path: 'PR_NUMBER'
-        id: pr_number
       - name: Zip plugin
         run: |
           PR_NUM="${{ steps.pr_number.outputs.contents }}"
